新增表格介紹

--- a/_posts/2019-07-11-markdown.markdown
+++ b/_posts/2019-07-11-markdown.markdown
@@ -5,7 +5,7 @@ date:   2019-07-11 14:20:00 +0800
 categories: jekyll update
 ---
 
-『字體』
+#『字體』
 
 
 **粗體**   
@@ -36,7 +36,7 @@ Markdown 語法：
 ###### 小標題
 ```
 
-『列表』  
+#『列表』  
 
 
 * Item 1  
@@ -59,7 +59,7 @@ Markdown 語法：
   * Item 2b  
 ```
 
-『區塊』
+#『區塊』
 
 在要標註的字前後加上 <code>`</code>
 
@@ -80,7 +80,11 @@ Markdown 語法：
     這個是大區塊 大區塊  
 ```
 
-『程式碼』
+
+
+#『程式碼』
+
+
 
 
 ```C#
@@ -92,7 +96,7 @@ public bool IsSuccess()
     }
     return false;
 }
-```       
+```
 <pre lang="no-highlight"><code>
 Markdown 語法：
 
@@ -109,3 +113,21 @@ public bool IsSuccess()
 </code></pre>    
 
 
+
+#『表格』
+
+| 編號 |   名稱   | 價錢  |
+| ---- | :------: | :---: |
+| 1    | 每抽必中 | $1000 |
+| 2    | 十抽一中 | $100  |
+| 3    | 百抽一中 |  $10  |
+
+```no-highlight
+Markdown 語法：
+
+| 編號          | 名稱          | 價錢  |
+| ------------- |:-------------:| -----:|
+| 1             | 每抽必中      | $1000 |
+| 2             | 十抽一中      |  $100 |
+| 3             | 百抽一中      |   $10 |
+```
