🐛 fix: 修正無法顯示圖片的問題

--- a/_posts/2007-05-03-we_online.markdown
+++ b/_posts/2007-05-03-we_online.markdown
@@ -8,7 +8,7 @@ categories: jekyll update
 ## 唯舞獨尊Online
 這是一款結合時尚的音樂遊戲，玩家只需使用簡單的 4 個方向鍵，隨著音樂節拍操縱遊戲中的人物，與其他玩家進行對戰尬舞，非常考驗手指的反應和節奏感。
 
-![唯舞獨尊Online](../image/we_online.jpeg)
+![唯舞獨尊Online](./images/we_online.jpeg)
 
 ### 2007年5月3日公開測試
 
