--- a/_posts/2007-05-03-we_online.markdown
+++ b/_posts/2007-05-03-we_online.markdown
@@ -9,6 +9,12 @@ categories: jekyll update
 ![唯舞獨尊Online](/image/github.io/we_online.jpeg)
 這是一款結合時尚的音樂遊戲，玩家只需使用簡單的 4 個方向鍵，隨著音樂節拍操縱遊戲中的人物，與其他玩家進行對戰尬舞，非常考驗手指的反應和節奏感。
 
+---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ddrc-0M5uUs" frameborder="0" allowfullscreen></iframe>
+
+---
+
 ### 2007年5月3日公開測試
 
 [🔗 巴哈姆特-唯舞獨尊 Online 介紹網頁](https://acg.gamer.com.tw/acgDetail.php?s=10967)
