--- a/_posts/2012-04-19-we_fb.markdown
+++ b/_posts/2012-04-19-we_fb.markdown
@@ -9,6 +9,12 @@ categories: jekyll update
 ![唯舞獨尊(臉書版)](/image/github.io/we_fb.jpeg)
 具有多樣的音樂玩法模式，加上社交平台特有的好友互動、趣味分享等元素，讓玩家可以與好友一起聽音樂、玩遊戲。透過獨特的社交聊天功能，還能認識更多玩家一起同樂。
 
+---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xuk4FPJRY9Q" frameborder="0" allowfullscreen></iframe>
+
+---
+
 ### 2012年04月19日不刪檔測試
 
 [🔗 巴哈姆特-唯舞獨尊（臉書版） 介紹網頁](https://acg.gamer.com.tw/acgDetail.php?s=54751)
