--- a/_posts/2016-10-06-survivor.markdown
+++ b/_posts/2016-10-06-survivor.markdown
@@ -9,6 +9,16 @@ categories: jekyll update
 ![倖存者聯盟](/image/github.io/survivor.jpg)
 這是一款以全新末日角度打造的殭屍題材即時戰略手機遊戲，期待引爆全球生存之戰。
 
+---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3rRL80B6Y5s" frameborder="0" allowfullscreen></iframe>
+
+---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CysCdm4eaBQ" frameborder="0" allowfullscreen></iframe>
+
+---
+
 ### 2016年10月06日公測
 
 [🔗 巴哈姆特-倖存者聯盟 介紹網頁](https://acg.gamer.com.tw/acgDetail.php?s=85429)
