--- a/_posts/2018-01-10-salmon.markdown
+++ b/_posts/2018-01-10-salmon.markdown
@@ -9,6 +9,12 @@ categories: jekyll update
 ![雪霸國家公園櫻花鉤吻鮭互動導覽程式](/image/github.io/salmon.jpg)
 與台灣櫻花鉤吻鮭有關的互動遊戲，模擬國寶魚在溪流中的生態，遊客可藉由遊戲的互動內容，更加深入的認識國寶魚的棲地環境與生態知識。
 
+---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8qWqWpy5SG0" frameborder="0" allowfullscreen></iframe>
+
+---
+
 ### 2018年01月10日重新開放
 
 [🔗 櫻花鉤吻鮭生態館重新開放 新增互動遊戲深入認識國寶魚 介紹新聞](https://reurl.cc/WAll35)
