--- a/_posts/2014-10-09-we_dx.markdown
+++ b/_posts/2014-10-09-we_dx.markdown
@@ -6,6 +6,7 @@ categories: jekyll update
 ---
 
 ## 唯舞獨尊 DX
+![Unity](https://img.shields.io/badge/unity-%23000000.svg?style=for-the-badge&logo=unity&logoColor=white) ![C#](https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&logo=csharp&logoColor=white)  
 ![唯舞獨尊 DX](/image/github.io/we_dx.jpeg)
 全新打造的線上音樂節奏跳舞遊戲，遊戲保留了玩家熟悉的玩法，並收錄最多的華文歌曲。本作採用 Unity 3D 引擎打造，官方強調畫面比前作更為細緻。研發團隊在開發時訴求遊戲人物外觀和服裝較為貼近真人比例，但五官不會過於寫實而失去夢幻感。
 
