--- a/_posts/2012-04-19-we_fb.markdown
+++ b/_posts/2012-04-19-we_fb.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "唯舞獨尊(臉書版) 2011/1~2012/4"
+title_image: /image/github.io/we_fb.jpeg
 date:   2012-04-19 00:00:00 +0800
 categories: jekyll update
 ---
