--- a/_posts/2014-10-09-we_dx.markdown
+++ b/_posts/2014-10-09-we_dx.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "唯舞獨尊 DX 2013/11~2014/10"
+title_image: /image/github.io/we_dx.jpeg
 date:   2014-10-09 00:00:00 +0800
 categories: jekyll update
 ---
