--- a/_posts/2016-10-06-survivor.markdown
+++ b/_posts/2016-10-06-survivor.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "倖存者聯盟 2015/11~2016/10"
+title_image: /image/github.io/survivor.jpg
 date:   2016-10-06 00:00:00 +0800
 categories: jekyll update
 ---
