--- a/_posts/2007-05-03-we_online.markdown
+++ b/_posts/2007-05-03-we_online.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "唯舞獨尊Online 2005/12~2007/5"
+title:  "🔗 唯舞獨尊Online 2005/12~2007/5"
 title_image: /image/github.io/we_online.jpeg
 excerpt: 這是一款結合時尚的音樂遊戲，玩家只需使用簡單的 4 個方向鍵，隨著音樂節拍操縱遊戲中的人物，與其他玩家進行對戰尬舞，非常考驗手指的反應和節奏感。
 date:   2007-05-03 00:00:00 +0800
